--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,52 @@ body {
     width: 50%;
 }
 
+.w-33 {
+    width: 33%;
+}
+
+.col {
+    height: 100%;
+    text-align: center;
+}
+
+h1 {
+    margin-bottom: 30px;
+    font-size: 50px;
+    font-weight: 600px;
+    color: white;
+    letter-spacing: 2px;
+}
+
+.title-green {
+    color: #7cbb02;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+h3 {
+    font-size: 26px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+.subtitle {
+    font-size: 18px;
+    font-weight: 500;
+    color: grey;
+}
+
+p {
+    color: grey;
+    font-size: 14px;
+}
+
+hr {
+    width: 100%;
+    margin: 50px 0;
+    color: lightgrey;
+    opacity: 0.4;
+}
+
 /* buttons */
 .btn {
     display: inline-block;
@@ -82,8 +128,8 @@ body {
 }
 
 /* header */
-header {
-    height: 600px;
+.page-header {
+    height: 80vh;
     background-color: #0c325a;
     background-image: url(../img/background-header.png);
     background-position: 115% 105%;
@@ -127,10 +173,46 @@ nav {
     transform: translateY(-50%);
 }
 
-h1 {
-    margin-bottom: 30px;
-    font-size: 50px;
-    font-weight: 600px;
-    color: white;
-    letter-spacing: 2px;
+/* main */
+.main-header {
+    width: 100%;
+    height: 20vh;
+    position: relative;
+    background-color: #d3d3d3;
+    text-align: center;
+}
+
+.main-header > .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/* main section 1 */
+.main-section-1 {
+    width: 100%;
+    margin-top: 50px;
+}
+
+.main-section-1 img {
+    height: 150px;
+    margin: 15px 0;
+}
+
+.col hr {
+    width: 20%;
+    opacity: 1;
+    color: grey;
+    margin: 25px auto;
+}
+
+/* main section 2 */
+.main-section-2 {
+    height: 500px;
+}
+
+.main-section-2 img {
+    display: block;
+    width: 100%;
 }
