--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,8 @@ body {
     width: 50%;
 }
 
-.w-33 {
-    width: 33%;
-}
-
-.col {
-    height: 100%;
-    text-align: center;
+.w-30 {
+    width: 30%;
 }
 
 h1 {
@@ -64,7 +59,7 @@ h1 {
 
 .title-green {
     color: #7cbb02;
-    font-size: 24px;
+    font-size: 28px;
     font-weight: 500;
 }
 
@@ -81,12 +76,11 @@ h3 {
 
 p {
     color: grey;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 hr {
     width: 100%;
-    margin: 50px 0;
     color: lightgrey;
     opacity: 0.4;
 }
@@ -142,7 +136,7 @@ hr {
 
 /* header */
 .page-header {
-    height: 600px;
+    height: 80vh;
     background-color: #0c325a;
     background-image: url(../img/background-header.png);
     background-position: 115% 105%;
@@ -189,23 +183,16 @@ nav {
 /* main */
 .main-header {
     width: 100%;
-    height: 20vh;
-    position: relative;
+    padding: 50px 0;
     background-color: #d3d3d3;
     text-align: center;
-}
-
-.main-header > .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 /* main section 1 */
 .main-section-1 {
     width: 100%;
-    margin-top: 50px;
+    margin: 50px 0;
+    text-align: center;
 }
 
 .main-section-1 img {
@@ -220,23 +207,27 @@ nav {
     margin: 25px auto;
 }
 
+.col-center {
+    margin: 0 5%;
+}
 /* main section 2 */
 .main-section-2 {
-    width: 70%;
     margin: 15px auto;
 }
 .main-section-2 img {
     display: block;
-    width: 70%;
-    margin: 20px auto;
+    width: 80%;
+    margin: 50px auto;
 }
 
 .col-50-title {
     width: 70%;
+    margin: 50px auto;
     text-align: left;
 }
+
 .col-50-title > h2 {
-    font-size: 32px;
+    font-size: 30px;
     font-weight: 500;
     margin: 20px 0;
 }
@@ -250,12 +241,21 @@ nav {
 /* footer */
 footer {
     background-color: #d3d3d3;
-    height: 150px;
-    line-height: 150px;
+    height: 20vh;
+    line-height: 20vh;
+}
+
+footer .footer-title,
+footer .footer-nav {
+    display: inline-block;
 }
 
 .footer-title {
     text-align: left;
+}
+.footer-title > h2 {
+    font-size: 30px;
+    font-weight: 500;
 }
 
 .footer-nav {
